--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,minimal-ui, shrink-to-fit=no">
 	<link rel="stylesheet" href="styles/common.css">
+	<link rel="stylesheet" href="styles/door.css">
 	<title>安居艾臣体验中心</title>
 
 </head>
@@ -32,13 +33,17 @@
 							<i></i>
 							<i></i>
 						</div>
-						<div class="look">
-							<div>
-							<img src="images/door/1.png" alt="" class="q-img top-l">
-							<img src="images/door/2.png" alt="" class="q-img top-r">
+						<div class="equipment">
+							<div class="l-t">
+								<img src="images/door/1.png" alt="密码锁" class="q-img look">
+								<img src="images/door/2.png" alt="门铃" class="q-img bell">
 							</div>
-							<div>
-							<img src="images/door/4.png" alt="" class="q-img bottom">
+							<div class="l-b">
+								<img src="images/door/4.png" alt="指纹识别" class="q-img finger-mark">
+								<div class="tips">
+									<span class="point"></span>
+									<span class="content">按下指纹解锁</span>
+								</div>
 							</div>
 						</div>
 					</div>
