add kitchen page

--- a/room.html
+++ b/room.html
@@ -16,15 +16,41 @@
 			<div class="right">客厅</div>
 		</header>
 		<div class="page">
-			<div class="light"></div><!-- 灯 -->
+			<div class="light">
+				<div class="tips">
+					<span class="point"></span>
+					<span class="content">灯</span>
+				</div>
+			</div><!-- 灯 -->
 			<div class="rod"></div><!-- 窗帘杆 -->
 			<div class="window">
+				<div class="tips">
+					<span class="point"></span>
+					<span class="content">窗</span>
+				</div>
 				<div class="left-win"></div>
 				<div class="right-win"></div>
 			</div><!-- 窗户 -->
-			<div class="curtains"></div><!-- 窗帘 -->
-			<div class="sound"></div><!-- 音响 -->
-			<div class="air"></div><!-- 空调 -->
+			<div class="curtains left">
+				<div class="tips">
+					<span class="point"></span>
+					<span class="content">窗帘</span>
+				</div>
+			</div><!-- 窗帘 -->
+			<div class="curtains right"></div><!-- 窗帘 -->
+			<div class="sound">
+				<div class="tips">
+					<span class="point"></span>
+					<span class="content">音响</span>
+				</div>
+			</div><!-- 音响 -->
+			<div class="air">
+				<div class="tips">
+					<span class="point"></span>
+					<span class="content">空调</span>
+				</div>
+				<div class="wind"></div>
+			</div><!-- 空调 -->
 			<div class="sofa"></div><!-- 沙发 -->
 		</div>
 	</section>
