update kitchen page

--- a/kitchen.html
+++ b/kitchen.html
@@ -28,19 +28,43 @@
 				<div class="left"></div>
 				<div class="frame"></div>
 				<div class="right"></div>
+				<div class="tips">
+					<span class="point"></span>
+					<span class="content">电动窗</span>
+				</div>
 			</div>
 			<!-- 抽风机 -->
-			<div class="fan"></div>
+			<div class="fan">
+				<div class="tips">
+					<span class="point"></span>
+					<span class="content">抽风机</span>
+				</div>
+			</div>
 			<!-- 送风机 -->
-			<div class="air-blower"></div>
+			<div class="air-blower">
+				<div class="tips">
+					<span class="point"></span>
+					<span class="content">送风机</span>
+				</div>
+			</div>
 			<!-- 冰箱 -->
-			<div class="fridge"></div>
+			<div class="fridge">
+				<div class="tips">
+					<span class="point"></span>
+					<span class="content">冰箱</span>
+				</div>
+			</div>
 			<!-- 橱柜 -->
 			<div class="cupboard">
 				<!-- 上门框 -->
 				<div class="top frame"></div>
 				<!-- 灯带 -->
-				<div class="light-belt"></div>
+				<div class="light-belt">
+					<div class="tips">
+					<span class="point"></span>
+					<span class="content">灯带</span>
+				</div>
+				</div>
 				<!-- 开关 -->
 				<div class="btn"></div>
 				<!-- 水龙头 -->
@@ -52,7 +76,12 @@
 			</div>
 			<!-- 抽烟机 -->
 			<div class="smoke-machine">
-				<div class="machine"></div>
+				<div class="machine">
+					<div class="tips">
+						<span class="point"></span>
+						<span class="content">抽烟机</span>
+					</div>
+				</div>
 			</div>
 			<!-- 操作台墙 -->
 			<div class="console-wall"></div>
@@ -66,10 +95,30 @@
 			<div class="dining-table">
 				<div class="top"></div>
 			</div>
+			<!-- 健康食谱 -->
+			<div class="recipes">
+				<div class="tips">
+					<span class="point"></span>
+					<span class="content">健康食谱</span>
+				</div>
+			</div>
+			<!-- 凳子 -->
+			<div class="stool1"></div>
+			<div class="stool2"></div>
+			<div class="stool3"></div>
 			<!-- 地毯 -->
 			<div class="carpet"></div>
 			<!-- 中控 -->
-			<div class="model"></div>
+			<div class="model">
+				<div class="icon btn-fridge">冰箱</div>
+				<div class="icon btn-light">主灯</div>
+				<div class="icon btn-smoke-machine">抽烟机</div>
+				<div class="icon btn-fan">抽风机</div>
+				<div class="icon btn-air-blower">送风机</div>
+				<div class="icon btn-light-belt">灯带</div>
+				<div class="icon btn-win">电动窗</div>
+				<div class="icon btn-recipes">健康食谱</div>
+			</div>
 		</div>
 	</section>
 	<script type="text/javascript">
