--- a/app/index.tmpl.html
+++ b/app/index.tmpl.html
@@ -7,7 +7,7 @@
     <title>安居艾臣体验中心</title>
   </head>
   <body>
-    <div id='root' class="swiper-container swiper-container-horizontal">
+    <div id='root'>
     </div>
     <script type="text/javascript">
 		(function(doc, win) {
