--- a/app/index.tmpl.html
+++ b/app/index.tmpl.html
@@ -5,6 +5,60 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,minimal-ui, shrink-to-fit=no">
     <title>安居艾臣体验中心</title>
     <style>
+			html, body, div, span, applet, object, iframe,
+			h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+			a, abbr, acronym, address, big, cite, code,
+			del, dfn, em, img, ins, kbd, q, s, samp,
+			small, strike, strong, sub, sup, tt, var,
+			b, u, i, center,
+			dl, dt, dd, ol, ul, li,
+			fieldset, form, label, legend,
+			table, caption, tbody, tfoot, thead, tr, th, td,
+			button,article, aside, canvas, details, embed, figure,
+			figcaption, footer, header, hgroup, menu, nav,
+			output, ruby, section, summary, time, mark,
+			audio, video {
+			  margin: 0;
+			  padding: 0;
+			  border: 0;
+			  vertical-align: baseline;
+			  background: transparent;
+			  outline: none;
+			  -webkit-box-sizing: border-box;
+			  -moz-box-sizing: border-box;
+			  box-sizing: border-box;
+
+			}
+			article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { display: block; }
+			ol, ul { list-style: none; }
+			button{background: transparent;}
+			blockquote, q { quotes: none; }
+			blockquote:before, blockquote:after, q:before, q:after { content: ''; content: none; }
+			strong { font-weight: bold; }
+			table { border-collapse: collapse; border-spacing: 0; }
+			img { border: 0; max-width: 100%; }
+			html{
+			  line-height: initial;
+			  position: relative;
+			  height: 100%;
+			  overflow: hidden;
+			}
+			html *{
+			    -webkit-font-smoothing: antialiased;
+			    -webkit-tap-highlight-color:rgba(0, 0, 0, 0);
+			    -webkit-touch-callout:none;
+			}
+			body {
+			    background: #eee;
+			    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+			    font-size: 16px;
+			    color:#000;
+			    margin: 0;
+			    padding: 0;
+			    height: 100%;
+			    position: relative;
+			    overflow: hidden;
+			}
     	.loading{
     		padding: 0;
     		margin: 0;
@@ -16,26 +70,18 @@
 		    align-content: center;
 		    background-color: #fff;
 		    font-size: 0;
-			}
-			.loading:before{
-				content: '';
-				width: 40px;
-				height: 40px;
-				border-radius: 50%;
-				border-left: 4px solid #000;
-				animation: loadingrun 1s infinite linear;
-				font-size: 0;
-				padding: 0;
-				margin: 0;
+		    text-align: center;
+		    overflow: hidden;
+		    color: black;
 			}
 			.loading:after{
 				/*color: #fff;*/
 				font-size: 16px;
-				content: 'loading';
+				content: 'Loading';
 				position: absolute;
 				top: calc(50% + 44px);
-				padding: 0;
-				margin: 0;
+				width: 100%;
+				left: 0;
 			}
 			@keyframes loadingrun{
 				0%{
@@ -47,9 +93,11 @@
 			} 
     </style>
   </head>
-  <body class="loading">
+  <body>
   <div id="root" style="display: none"></div>
-  
+  <div id="loading" class="loading">
+  	<img src="loading.svg" width="64" height="64">
+  </div>
     <script type="text/javascript">
     
 		(function(doc, win) {
@@ -63,15 +111,17 @@
 				} else {
 					docEl.style.fontSize = 32 * (clientWidth / 750) + 'px';
 				}
-				var loading=doc.body;
+				var loading=doc.getElementById('loading');
 				if(loading && loading.classList){
 					setTimeout(function(){
 						loading.classList.remove("loading");
-						// loading.style.display='none';
+						loading.style.display='none';
 						doc.getElementById('root').style.display='block';
 					},2000)
 				}else{
 					loading.setAttribute("className", ""); 
+					loading.style.display='none';
+					doc.getElementById('root').style.display='block';
 				}
 			};
 
